; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_socket.c_usbffs_select_ep.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_socket.c_usbffs_select_ep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i8* }

@.str = private unnamed_addr constant [4 x i8] c"ep0\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dirent*)* @usbffs_select_ep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbffs_select_ep(%struct.dirent* %0) #0 {
  %2 = alloca %struct.dirent*, align 8
  store %struct.dirent* %0, %struct.dirent** %2, align 8
  %3 = load %struct.dirent*, %struct.dirent** %2, align 8
  %4 = getelementptr inbounds %struct.dirent, %struct.dirent* %3, i32 0, i32 0
  %5 = load i8*, i8** %4, align 8
  %6 = getelementptr inbounds i8, i8* %5, i64 0
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp ne i32 %8, 46
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.dirent*, %struct.dirent** %2, align 8
  %12 = getelementptr inbounds %struct.dirent, %struct.dirent* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = call i32 @streq(i8* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br label %17

17:                                               ; preds = %10, %1
  %18 = phi i1 [ false, %1 ], [ %16, %10 ]
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i32 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
